Añadir funciones para encriptar/desencriptar mensajes

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body>
     <img class="logo" src="public/Logo.png" alt="logo alura">
     <main class="userInput">
-        <textarea autofocus cols="40" rows="5" type="text"class="input" placeholder="Ingrese texto aqui ">
+        <textarea autofocus cols="40" rows="5" type="text"class="input" id="text-input"  placeholder="Ingrese texto aqui ">
         </textarea>
        <div class="bottom">
         <span class="spoiler"><i class="fa-sharp fa-solid fa-circle-info"></i>Solo letras minúsculas y sin acentos</span>
        <div class="btnContainer">
-       <button class="btn dark">Encriptar</button>
-        <button class="btn ligth">Desencriptar</button>
+       <button id="encriptar" class="btn dark">Encriptar</button>
+        <button id="desencriptar" class="btn ligth">Desencriptar</button>
     </div> 
 </div>
 
