Mostar texto encriptado/desencriptado y funcion de copiar

--- a/index.html
+++ b/index.html
@@ -23,13 +23,17 @@
 
     </main>
     <aside class="userOutput"> 
-        <div class="textOutput">
-            <img class="imgOutput" alt="persona no encontro nada " src="public/Muñeco.png">
-            <div class="text">
+        <div class="textOutput ">
+            <img class="imgOutput " alt="persona no encontro nada " src="public/Muñeco.png">
+            <div class="text ">
             <span class="line title">Ningun mensaje fue encontrado</span>
             <span class="line subtitle">Ingresa el texto que deseas encriptar o desencriptar</span>
         </div>
+        </div>
 
+        <div class="textOutputCrypted empty">
+            <p class="textCrypted ">AAAAA</p>
+            <button class=" btn buttonCrypted ligth">Copiar</button>
         </div>
 
     </aside>
