Añadir diseño responviso smartPhone

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <img class="logo" src="public/Logo.png" alt="logo alura">
     <main class="userInput">
-        <textarea autofocus cols="40" rows="10" type="text"class="input" id="text-input"  placeholder="Ingrese texto aqui ">
+        <textarea autofocus spellcheck="false" cols="40" rows="10" type="text"class="input" id="text-input"  placeholder="Ingrese texto aqui ">
         </textarea>
        <div class="bottom">
         <span class="spoiler"><i class="fa-sharp fa-solid fa-circle-info"></i>Solo letras minúsculas y sin acentos</span>
